--- a/Web/Partials/ToolkitContent.html
+++ b/Web/Partials/ToolkitContent.html
@@ -20,8 +20,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 text-center">
-                Courses
-           
+                Toolkit
             </div>
         </div>
     </div>
@@ -40,8 +39,8 @@
                     <form role="form">
                         <h3>Course List</h3>
                         <ul>
-                            <li class="checkbox" ng-repeat="course in Courses" ng-click="DisplayCourse(course);" ng-class="{'selectedItem':course.isSelected}">
-                                <label>{{course.courseName}}</label>
+                            <li class="checkbox" ng-repeat="toolkit in Toolkits" ng-click="DisplayToolkit(toolkit);" ng-class="{'selectedItem':course.isSelected}">
+                                <label>{{toolkit.toolkitName}}</label>
                             </li>
                         </ul>
                     </form>
@@ -64,35 +63,35 @@
                         <div class="col-sm-12">
                             <div class="row">
                                 <div class="col-md-9 col-sm-8 col-xs-8">
-                                    <h3><a href="">{{CourseList.courseName}}</a></h3>
+                                    <h3><a href="">{{ToolkitList.toolkitName}}</a></h3>
                                     <div class="meta">
-                                        <span><a href="#">Start Date</a> : {{CourseList.startDate}}</span>
-                                        <span><a href="#">End Date</a> : {{CourseList.endDate}}</span>
+                                        <span><a href="#">Start Date</a> : {{ToolkitList.startDate}}</span>
+                                        <span><a href="#">End Date</a> : {{ToolkitList.endDate}}</span>
                                     </div>
                                 </div>
-                                <div class="col-md-3 col-sm-4 price">{{CourseList.currencyType}} {{CourseList.price}}</div>
+                                <div class="col-md-3 col-sm-4 price">{{ToolkitList.currencyType}} {{ToolkitList.price}}</div>
                             </div>
                             <div class="row col-sm-12">
                                 <a href="">Description</a>
                             </div>
-                            <div class="row" data-ng-show="CourseList.freeContent!=null && CourseList.freeContent.description!=null">
+                            <div class="row" data-ng-show="ToolkitList.freeContent!=null && ToolkitList.freeContent.description!=null">
                                 <div class="col-sm-12">
                                     <p>
-                                        {{CourseList.freeContent.description}}
+                                        {{ToolkitList.freeContent.description}}
                                     </p>
                                 </div>
                             </div>
-                            <div class="row" data-ng-show="CourseList.publicContent!=null && CourseList.publicContent.description!=null">
+                            <div class="row" data-ng-show="ToolkitList.publicContent!=null && ToolkitList.publicContent.description!=null">
                                 <div class="col-sm-12">
                                     <p>
-                                        {{CourseList.publicContent.description}}
+                                        {{ToolkitList.publicContent.description}}
                                     </p>
                                 </div>
                             </div>
-                            <div class="row" data-ng-show="CourseList.paidContent!=null && CourseList.paidContent.description!=null">
+                            <div class="row" data-ng-show="ToolkitList.paidContent!=null && ToolkitList.paidContent.description!=null">
                                 <div class="col-sm-12">
                                     <p>
-                                        {{CourseList.paidContent.description}}
+                                        {{ToolkitList.paidContent.description}}
                                     </p>
                                 </div>
                             </div>
@@ -106,8 +105,8 @@
                             <div class="row">
                                 <div class="col-md-8 col-sm-8">
                                     <div>
-                                        <a href="">Course Name</a>
-                                        <input type="text" maxlength="255" class="form-control" data-ng-model="CourseList.courseName" /><br />
+                                        <a href="">Toolkit Name</a>
+                                        <input type="text" maxlength="255" class="form-control" data-ng-model="ToolkitList.toolkitName" /><br />
                                     </div>
                                 </div>
                             </div>
@@ -115,7 +114,7 @@
                                 <div class="col-md-8 col-sm-8">
                                     <p>
                                         <a href="">Currency</a>
-                                        <select style class="form-control" data-ng-model="CourseList.currencyType">
+                                        <select style class="form-control" data-ng-model="ToolkitList.currencyType">
                                             <option value="1">INR</option>
                                             <option value="2">Dollar</option>
                                             <option value="3">Euro</option>
@@ -124,7 +123,7 @@
 
                                     <p>
                                         <a href="">Price</a>
-                                        <input class="form-control" type="number" min="0" data-ng-model="CourseList.price" />
+                                        <input class="form-control" type="number" min="0" data-ng-model="ToolkitList.price" />
                                     </p>
                                 </div>
                             </div>
@@ -132,14 +131,14 @@
                                 <p>
                                     <div class="col-sm-2">
                                         <a href="">Start Date</a>
-                                        <input type="text" autoclose data-date-format="dd/mm/yyyy" class="datepicker" data-ng-model="CourseList.startDate" />
+                                        <input type="text" autoclose data-date-format="dd/mm/yyyy" class="datepicker" data-ng-model="ToolkitList.startDate" />
                                     </div>
                                     <div class="col-sm-2">
                                         &nbsp;
                                     </div>
                                     <div class="col-sm-2">
                                         <a href="">End Date</a>
-                                        <input type="text" autoclose data-date-format="dd/mm/yyyy" class="datepicker" data-ng-model="CourseList.endDate" />
+                                        <input type="text" autoclose data-date-format="dd/mm/yyyy" class="datepicker" data-ng-model="ToolkitList.endDate" />
                                     </div>
                                 </p>
                             </div>
@@ -147,7 +146,7 @@
                                 <div class="col-sm-12">
                                     <p>
                                         <a href="">Free Content</a>
-                                        <textarea class="form-control" maxlength="1000" data-ng-model="CourseList.freeContent.description"></textarea>
+                                        <textarea class="form-control" maxlength="1000" data-ng-model="ToolkitList.freeContent.description"></textarea>
                                     </p>
                                 </div>
                             </div>
@@ -155,7 +154,7 @@
                                 <div class="col-sm-12">
                                     <p>
                                         <a href="">Paid Content</a>
-                                        <textarea class="form-control" maxlength="1000" data-ng-model="CourseList.paidContent.description"></textarea>
+                                        <textarea class="form-control" maxlength="1000" data-ng-model="ToolkitList.paidContent.description"></textarea>
                                     </p>
                                 </div>
                             </div>
@@ -163,7 +162,7 @@
                                 <div class="col-sm-12">
                                     <p>
                                         <a href="">Public Content</a>
-                                        <textarea class="form-control" maxlength="1000" data-ng-model="CourseList.publicContent.description"></textarea>
+                                        <textarea class="form-control" maxlength="1000" data-ng-model="ToolkitList.publicContent.description"></textarea>
                                     </p>
                                 </div>
                             </div>
@@ -171,33 +170,33 @@
                     </div>
                     <!-- Admin Course End -->
 
-                    <div class="row col-sm-4 " data-ng-show="CourseList.freeContent.fileAttachment!=null && CourseList.freeContent.fileAttachment.length>0">
+                    <div class="row col-sm-4 " data-ng-show="ToolkitList.freeContent.fileAttachment!=null && ToolkitList.freeContent.fileAttachment.length>0">
                         <a href="">Free Content Images</a>
                         <input data-ng-show="isAdmin" type="file" class="form-control" name="txtFileUpload" id="File1" title="Upload File"
                             onchange="angular.element(this).scope().setFiles(this,1);">
-                        <span ng-repeat="document in CourseList.freeContent.fileAttachment | filter : {isDeleted:false}">
+                        <span ng-repeat="document in ToolkitList.freeContent.fileAttachment | filter : {isDeleted:false}">
                             <img src="{{document.imageURL}}" alt="" class="img-thumbnail" />
                             <div data-ng-show="isAdmin">
                                 {{document.documentName}} (<a href="" ng-click="document.isDeleted=true">Delete</a>)
                             </div>
                         </span>
                     </div>
-                    <div class="col-sm-4 " data-ng-class="classInitialize(DocumentScope.PublicContent)" data-ng-show="CourseList.publicContent.fileAttachment!=null && CourseList.publicContent.fileAttachment.length>0">
+                    <div class="col-sm-4 " data-ng-class="classInitialize(DocumentScope.PublicContent)" data-ng-show="ToolkitList.publicContent.fileAttachment!=null && ToolkitList.publicContent.fileAttachment.length>0">
                         <a href="">Public Content Images</a>
                         <input data-ng-show="isAdmin" type="file" class="form-control" name="txtFileUpload" id="File2" title="Upload File"
                             onchange="angular.element(this).scope().setFiles(this,2);">
-                        <div ng-repeat="document in CourseList.publicContent.fileAttachment | filter : {isDeleted:false}">
+                        <div ng-repeat="document in ToolkitList.publicContent.fileAttachment | filter : {isDeleted:false}">
                             <img src="{{document.imageURL}}" alt="" class="img-thumbnail" />
                             <div data-ng-show="isAdmin">
                                 {{document.documentName}} (<a href="" ng-click="document.isDeleted=true">Delete</a>)
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4" data-ng-class="classInitialize(DocumentScope.PaidContent)" data-ng-show="CourseList.paidContent.fileAttachment!=null && CourseList.paidContent.fileAttachment.length>0">
+                    <div class="col-sm-4" data-ng-class="classInitialize(DocumentScope.PaidContent)" data-ng-show="ToolkitList.paidContent.fileAttachment!=null && ToolkitList.paidContent.fileAttachment.length>0">
                         <a href="">Paid Content Images</a>
                         <input data-ng-show="isAdmin" type="file" class="form-control" name="txtFileUpload" id="txtFileUpload" title="Upload File"
                             onchange="angular.element(this).scope().setFiles(this,3);">
-                        <span ng-repeat="document in CourseList.paidContent.fileAttachment | filter : {isDeleted:false}">
+                        <span ng-repeat="document in ToolkitList.paidContent.fileAttachment | filter : {isDeleted:false}">
                             <img src="{{document.imageURL}}" alt="" class="img-thumbnail" />
                             <div data-ng-show="isAdmin">
                                 {{document.documentName}} (<a href="" ng-click="document.isDeleted=true">Delete</a>)
@@ -207,7 +206,7 @@
 
                     <div class="col-md-12" data-ng-show="isAdmin">
                         <p>
-                            <button type="submit" style="float: right;" class="btn btn-primary" data-ng-click="SaveCourse(CourseList)">Update</button>
+                            <button type="submit" style="float: right;" class="btn btn-primary" data-ng-click="SaveToolkit(ToolkitList)">Update</button>
                         </p>
                     </div>
                     <div class="col-md-12">
