Added purchased pages

--- a/Web/Partials/ToolkitContent.html
+++ b/Web/Partials/ToolkitContent.html
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 text-center">
-                Toolkit
+                {{isPaidPage==true?'Purchased Toolkit':'Toolkit'}}
             </div>
         </div>
     </div>
