--- a/Web/Partials/Courses.html
+++ b/Web/Partials/Courses.html
@@ -20,8 +20,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 text-center">
-                Courses
-           
+                {{isPaidPage==true?'Purchased Courses':'Courses'}}
             </div>
         </div>
     </div>
